# AI-PR-Review-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
backend/: cli.py  context_builder.py  github_client.py  main.py  report_formatter.py
backend/APP/: analyzer.py  pr_parser.py  risk_analyzer.py
backend/app/: ai_review_service.py  main.py  review_generator.py
backend/diffsense_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: test_ai_review.py  test_pr_parser.py
docs/: pr-plan.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  RiskBadge.tsx  api.ts  formatReviewMarkdown.ts  styles.css  types.ts
scripts/: dev.sh
